Add instructions for running on JDK9+